Fixed bug caused by copying the wrong colour.

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -12,7 +12,7 @@
 }
 
 .nav-item {
-  color: rgb(145, 160, 175);
+  color: rgb(242, 245, 248);
   text-align: center;
   text-decoration: none;
   padding-left: 16px;
